--- a/style.css
+++ b/style.css
@@ -108,8 +108,8 @@ nav a:active {
 
 
 #me {
+    width: 34%;
     margin-top: 40px;
-    max-width: 800px;
 }
 
 header {
@@ -182,87 +182,8 @@ main a {
     text-decoration: none;
 }
 
-.UXNav {
-position: relative;
-background-color: rgba(242, 242, 242, 1);
-width: 900px;
-height: 500px;
-border-radius: 20px;
-margin: 100px 306px;
-filter: drop-shadow(5px 5px 6px rgba(0, 0, 0, 0.5));
- }
-
-
- .ux_projects {
-    position: absolute;
-    color:rgba(127, 19, 174, 1);
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-size: 64px;
-    top: 36px;
-    right: 24px;
- }
-
-
-#LolkasUX {
-    width: 814px;
-    height: 492px;
-    padding: 4px 43px;
-}
-.SideNav {
-    background-color: rgba(242, 242, 242, 1);
-    width: 900px;
-    height: 500px;
-    border-radius: 20px;
-    margin: 165px 306px;
-    filter: drop-shadow(5px 5px 6px rgba(0, 0, 0, 0.5));
-}
-.LolkasSideProjects {
-    position: absolute;
-    top: 400px;
-    right: 24px;
-    font-size: 55px;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    color: rgb(91, 133, 77);
-}
-
-#LolkasSide {
-    width: 814px;
-    height: 492px;
-    padding: 4px 43px;
-}
-
-.AboutNav {
-    background-color: rgba(242, 242, 242, 1);
-    width: 900px;
-    height: 500px;
-    border-radius: 20px;
-    margin: 165px 306px;
-    filter: drop-shadow(5px 5px 6px rgba(0, 0, 0, 0.5));
-}
-
-.LolkasAboutMe{
-    position: absolute;
-    top: 36px;
-    right: 24px;
-    font-size: 64px;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    color: rgba(249, 87, 0);
-}
-
-#AboutLolka {
-    width: 814px;
-    height: 492px;
-    padding: 4px 43px;
-}
-
-#Designer_And_Vector{
-    margin-top: 90px;
-}
-
 #UX_Note {
-    width: 524px;
-    height: 493.52px;
-    margin-right: 150px;
+    width: 75%;
     margin-top: 50px;
 }
 
@@ -275,44 +196,14 @@ filter: drop-shadow(5px 5px 6px rgba(0, 0, 0, 0.5));
 .UXText {
     position: absolute;
     top: 300px;
-    left: 80px;
+    left: 95px;
     max-width: 400px;
     font-size: 18px;
     transform: rotate(2.8deg);
   }
-.HandlaSmartChoise{
-    background-color: rgba(242, 242, 242, 1);
-    width: 900px;
-    height: 500px;
-    border-radius: 20px;
-    margin: 165px 306px;
-    filter: drop-shadow(5px 5px 6px rgba(0, 0, 0, 0.5));
-}
-
-#HandlaSmartLogo{
-    padding: 87px 89px;
-}
-.MyScheduleChoise{
-    background-color: rgba(242, 242, 242, 1);
-    width: 900px;
-    height: 500px;
-    border-radius: 20px;
-    margin: 165px 306px;
-    filter: drop-shadow(5px 5px 6px rgba(0, 0, 0, 0.5));
-}
-
-#MyScheduleLogo {
-    padding: 190px 162px;
-}
-
-#Side_Vector{
-    margin-top: 90px;
-    width: 814px;
-    height: 492px;
-}
 
 #Side_Note {
-    width: 524px;
+    width: 500px;
     height: 493.52px;
     margin-right: 50px;
     margin-top: 50px;
@@ -354,6 +245,37 @@ footer {
     text-align: center;
 }
 
+.Choises{
+    width: 50%;
+    margin: 0 auto;
+}
+.Choises img{
+    margin: 0 auto;
+    margin-bottom: 26px;
+    width: 100%;
+}
+
+#Designer_And_Vector {
+    margin-top: 66px;
+    width: 50%;
+}
+
+.HandlaSmartChoise, .MyScheduleChoise{
+    margin: 0 auto;
+    width: 50%;
+}
+
+#MyScheduleLogo, #HandlaSmartLogo {
+    margin: 0 auto;
+    width: 100%;
+    margin-bottom: 26px;
+}
+
+#Side_Vector {
+    margin-top: 66px;
+    width: 50%;
+}
+
 
 /* MEDIA QUERIES */
 
@@ -386,6 +308,7 @@ footer {
     }
 
     .mobile_links a {
+        font-size: 0.65em;
         margin-right: 12px;
     }
 
@@ -413,28 +336,14 @@ footer {
     }
 
     #Lolita_Tochiieva_Logo {
+       margin-top: 12px;
         padding: 0;
-        margin-left: 8px;
-    }
-
-    .Choises .UXNav, .SideNav, .AboutNav{
-        margin: 0 auto;
-        padding: 0;
-        width: 66%;
+        width: 56px;
         height: auto;
-        display: grid;
-        grid-template-columns: 1fr;
     }
 
     .ux_projects, .LolkasAboutMe, .LolkasSideProjects {
         font-size: 24px;
-    }
-
-    #LolkasSide, #LolkasUX, #AboutLolka {
-        margin: 0 auto;
-        padding: 0;
-        width: 66%;
-        height: auto;
     }
 
     .LolkasSideProjects {
@@ -516,11 +425,17 @@ footer {
     }
 
     .centerText {
+        font-size: 80%;
+        max-width: 300px;
         text-align: center;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+    }
+
+    #me {
+        margin-top: 55px;
     }
 
 }
